<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.DriverAccountFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_marginTop="20dp"

        android:layout_marginBottom="200dp">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:id="@+id/img_passacc_picture"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:id="@+id/btn_passacc_changePicture"
            android:text="@string/change_profile_picture"
            android:textSize="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <EditText
                android:id="@+id/et_passacc_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/et_passacc_lastname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/et_passacc_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/et_passacc_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/et_passacc_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:minHeight="48dp" />
        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_passacc_save"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/save_changes"/>

    </LinearLayout>

</LinearLayout>