<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplication.MainActivity">
    <item
        android:id="@+id/action_passenger_ride_history"
        android:orderInCategory="100"
        android:title="@string/ride_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_passenger_account"
        android:orderInCategory="100"
        android:title="@string/account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_passenger_inbox"
        android:orderInCategory="100"
        android:title="@string/inbox"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_passenger_notifications"
        android:orderInCategory="100"
        android:title="Notifications"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_passenger_logout"
        android:orderInCategory="100"
        android:title="Logout"
        app:showAsAction="never" />
</menu>