<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DriverActiveRideFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">
                <Button
                    android:id="@+id/btn_driver_active_ride_panic"
                    android:layout_width="180dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/orange"
                    android:padding="8dp"
                    android:text="@string/panic"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/driver_active_ride_startTime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/cardview_dark_background"
                        android:text="Start time: 18/07/2022 10:43"
                        android:layout_weight="8"/>

                    <TextView
                        android:id="@+id/driver_active_ride_price"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        android:textColor="@color/black"
                        android:text="$18.2"
                        android:textAlignment="textEnd"
                        android:layout_weight="1" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_elapsed"
                        android:textSize="19sp"
                        android:layout_weight="8"/>
                    <TextView
                        android:id="@+id/driver_active_ride_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12 minutes"
                        android:textSize="19sp"
                        android:textAlignment="textEnd"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/driver_active_ride_departure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:text="@string/departure"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/driver_active_ride_destination"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:text="@string/destination"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="11dp"
                        android:layout_weight="11"
                        android:text="@string/passengers" />

                    <Button
                        android:id="@+id/btn_driver_active_quickMessage"
                        android:layout_width="140dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/cardview_light_background"
                        android:text="@string/quick_message"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:textSize="15sp" />
                </LinearLayout>


                <ListView
                    android:id="@+id/driver_active_ride_passengersList"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:divider="@android:color/black"
                    android:dividerHeight="0.5sp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_driver_active_ride_end"
                android:layout_gravity="center"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/green"
                android:padding="8dp"
                android:text="@string/end_ride"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>