<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DriverAcceptedRideFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/driver_accepted_ride_startTime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/cardview_dark_background"
                        android:text="Start time: 18/07/2022 10:43"
                        android:layout_weight="8"/>


                    <TextView
                        android:id="@+id/driver_accepted_ride_price"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text=""
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/cardview_dark_background"
                    android:text="@string/estimated_time_in_minutes"
                    android:layout_weight="8"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/driver_accepted_ride_estimatedTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/driver_accepted_ride_departure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:text="@string/departure"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/driver_accepted_ride_destination"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:text="@string/destination"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/btn_driver_accepted_ride_start"
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/green"
                android:padding="8dp"
                android:text="@string/start_ride"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/btn_driver_accepted_ride_cancel"
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/light_grey"
                android:padding="8dp"
                android:text="@string/cancel_ride"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>




        </LinearLayout>
    </ScrollView>

</LinearLayout>